src/test/ui/mutexguard-sync.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
  --> $DIR/mutexguard-sync.rs:11:15
   |
LL |     test_sync(guard);
   |     --------- ^^^^^ `Cell<i32>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `Cell<i32>`
   = note: required because of the requirements on the impl of `Sync` for `MutexGuard<'_, Cell<i32>>`
note: required by a bound in `test_sync`
  --> $DIR/mutexguard-sync.rs:5:17
   |
LL | fn test_sync<T: Sync>(_t: T) {}
   |                 ^^^^ required by this bound in `test_sync`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
